updated scripts to detect tomcat classloader memory leaks with Java 6